--- a/index.html
+++ b/index.html
@@ -127,19 +127,27 @@
       <h2 id="sluzby-title">Nabídka služeb</h2>
       <div class="grid grid-2" role="list">
         <article class="card" role="listitem">
-          <h3>Servis plynových kotlů</h3>
+          <div class="card-head">
+            <h3>Servis plynových kotlů</h3>
+          </div>
           <p>Pravidelný servis, čištění a diagnostika plynových kotlů v Liberci a okolí.</p>
         </article>
         <article class="card" role="listitem">
-          <h3>Revize a kontroly</h3>
+          <div class="card-head">
+            <h3>Revize a kontroly</h3>
+          </div>
           <p>Provádím zákonné revize plynových zařízení, včetně vystavení protokolu.</p>
         </article>
         <article class="card" role="listitem">
-          <h3>Montáž a výměna kotlů</h3>
+          <div class="card-head">
+            <h3>Montáž a výměna kotlů</h3>
+          </div>
           <p>Demonáž starého spotřebiče, dodávka a odborná montáž nového plynového kotle.</p>
         </article>
         <article class="card" role="listitem">
-          <h3>Poradenství a prodej</h3>
+          <div class="card-head">
+            <h3>Poradenství a prodej</h3>
+          </div>
           <p>Pomohu s výběrem kotle, příslušenství i vhodného řešení pro váš byt či dům.</p>
         </article>
       </div>
@@ -164,16 +172,21 @@
       <h2 id="info-title">Informace</h2>
       <div class="grid grid-2">
         <div class="card">
-          <h3>Proč zvolit místní plynservis</h3>
+          <div class="card-head">
+            <h3>Proč zvolit místní plynservis</h3>
+          </div>
           <p>Rychlý dojezd v rámci Liberce, znalost lokality a dostupnost náhradních dílů pro oblíbené značky.</p>
-          <ul>
-            <li>Certifikace a praxe</li>
-            <li>Transparentní ceny</li>
-            <li>Záruka na práci</li>
+          <ul class="checkcheck">
+            <li><i class="fa-solid fa-circle-check"></i><label>Certifikace a praxe</label></li>
+            <li><i class="fa-solid fa-circle-check"></i><label>Transparentní ceny</label></li>
+            <li><i class="fa-solid fa-circle-check"></i><label>Záruka na práci</label></li>
           </ul>
         </div>
         <div class="card">
-          <h3>Časté dotazy</h3>
+          <div class="card-head">
+            <h3>Časté dotazy</h3>
+          </div>
+          <div>
           <details>
             <summary>Jak často dělat servis kotle?</summary>
             <p>Jednou ročně před topnou sezónou; u revizí dle zákonných požadavků a typu zařízení.</p>
@@ -182,6 +195,7 @@
             <summary>Děláte revizní protokoly?</summary>
             <p>Ano, provádím zákonné revize plynových zařízení a vystavuji protokol.</p>
           </details>
+          </div>
         </div>
       </div>
     </section>
