--- a/index.html
+++ b/index.html
@@ -178,9 +178,9 @@
           </div>
           <p>Rychlý dojezd v rámci Liberce, znalost lokality a dostupnost náhradních dílů pro oblíbené značky.</p>
           <ul class="checkcheck">
-            <li><i class="fa-solid fa-circle-check"></i><label>Certifikace a praxe</label></li>
-            <li><i class="fa-solid fa-circle-check"></i><label>Transparentní ceny</label></li>
-            <li><i class="fa-solid fa-circle-check"></i><label>Záruka na práci</label></li>
+            <li><i class="fa-solid fa-circle-check"></i><span>Certifikace a praxe</span></li>
+            <li><i class="fa-solid fa-circle-check"></i><span>Transparentní ceny</span></li>
+            <li><i class="fa-solid fa-circle-check"></i><span>Záruka na práci</span></li>
           </ul>
         </div>
         <div class="card">
