takhle to je pety

--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
 <!doctype html>
 <html lang="cs">
+
 <head>
   <meta charset="utf-8">
   <title>Plynservis Liberec – servis a revize plynových kotlů | Vladimír Řehák</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta name="description" content="Servis a revize plynových kotlů v Liberci a okolí. Opravy, údržba, montáže a revizní protokoly. Rychlý výjezd, certifikovaný technik. Kontaktujte nás.">
+  <meta name="description"
+    content="Servis a revize plynových kotlů v Liberci a okolí. Opravy, údržba, montáže a revizní protokoly. Rychlý výjezd, certifikovaný technik. Kontaktujte nás.">
+  <link rel="icon" type="image/png" href="./img/favicons/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="./img/favicons/favicon.svg" />
+  <link rel="shortcut icon" href="./img/favicons/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="./img/favicons/apple-touch-icon.png" />
+  <meta name="apple-mobile-web-app-title" content="Plynservis" />
+  <link rel="manifest" href="./img/favicons/site.webmanifest" />
+  <meta name="theme-color" content="#F5D601">
+
   <link rel="canonical" href="https://www.priklad-domena.cz/">
 
   <!-- Open Graph -->
@@ -21,7 +31,7 @@
   rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.5.2/css/all.min.css"
 />
-<link rel="stylesheet" href="css/styles.css">
+<link rel="stylesheet" href="./css/styles.css">
 
 </head>
 
@@ -78,9 +88,9 @@
 <section class="hero" aria-labelledby="h1">
   <!-- Pozadí: rotující obrázky -->
   <div class="hero-bg" aria-hidden="true">
-    <img class="hero-slide is-active" src="img/hero-1.jpg" alt="" width="1920" height="900" loading="eager">
-    <img class="hero-slide" src="img/hero-2.jpg" alt="" width="1920" height="900" loading="lazy">
-    <img class="hero-slide" src="img/hero-3.png" alt="" width="1920" height="900" loading="lazy">
+    <img class="hero-slide is-active" src="./img/hero-1.jpg" alt="" width="1920" height="900" loading="eager">
+    <img class="hero-slide" src="./img/hero-2.jpg" alt="" width="1920" height="900" loading="lazy">
+    <img class="hero-slide" src="./img/hero-3.png" alt="" width="1920" height="900" loading="lazy">
     <div class="hero-blur"></div>
     <div class="hero-scrim"></div>
   </div>
@@ -117,9 +127,9 @@
 
 
 <div class="brands" aria-label="Značky kotlů">
-    <img src="img/brand-vaillant.svg" alt="Vaillant" width="170" height="60" loading="lazy">
-    <img src="img/brand-junkers.svg" alt="Junkers" width="170" height="60" loading="lazy">
-    <img src="img/brand-protherm.svg" alt="Protherm" width="170" height="60" loading="lazy">
+    <img src="./img/brand-vaillant.svg" alt="Vaillant" width="170" height="60" loading="lazy">
+    <img src="./img/brand-junkers.svg" alt="Junkers" width="170" height="60" loading="lazy">
+    <img src="./img/brand-protherm.svg" alt="Protherm" width="170" height="60" loading="lazy">
 </div>
 
 
@@ -155,17 +165,20 @@
     </section>
 
     <!-- CTA -->
-    <section class="container section cta" aria-labelledby="cta">
-      <h2 id="cta">Potřebujete rychlý zásah v Liberci?</h2>
-      <p>Nejrychlejší je zavolat. V naléhavých případech je možný výjezd ještě dnes.</p>
-        <p>
-        <a class="btn" href="tel:+420603212893">
-          <i class="fa-solid fa-phone" aria-hidden="true"></i>
-          <span class="sr-only">Zavolat:</span>
-          603&nbsp;212&nbsp;893
-        </a>
-      </p>
-      </p>
+    <section class="section" aria-labelledby="cta">
+      <div class="container">
+        <div class="cta">
+          <h2 id="cta">Potřebujete rychlý zásah v Liberci?</h2>
+          <p>Nejrychlejší je zavolat. V naléhavých případech je možný výjezd ještě dnes.</p>
+          <p>
+            <a class="btn" href="tel:+420603212893">
+              <i class="fa-solid fa-phone" aria-hidden="true"></i>
+              <span class="sr-only">Zavolat:</span>
+              603&nbsp;212&nbsp;893
+            </a>
+          </p>
+        </div>
+      </div>
     </section>
 
     <!-- INFORMACE -->
