--- a/index.html
+++ b/index.html
@@ -44,14 +44,11 @@
   <!-- HEADER / NAVBAR -->
   <header class="site-header" aria-label="Hlavní navigace">
   <div class="container nav-wrap">
-    <!-- Značka -->
+    <!-- Značka --> 
     <a class="brand" href="./" aria-label="Plynservis Liberec Vladimír Řehák">
-      <span class="brand-long">
-        <span class="brand-first">Plynservis Liberec</span>
-        <span class="brand-last">Vladimír Řehák</span>
-      </span>
-      <span class="brand-short" aria-hidden="true">Plynservis Řehák</span>
+      <img src="./img/ps-logo.svg" alt="Plynservis Liberec – Vladimír Řehák" width="180" height="auto">
     </a>
+
 
 
     <!-- Navigace (kolapsuje do dropdownu) -->
@@ -121,6 +118,11 @@
       Jsem certifikovaný servisní technik s mnohaletou zkušeností.
     </p>
   </div>
+
+ <a href="#sluzby" class="hero-arrow" aria-label="Posunout na obsah">
+  <i class="fa-solid fa-arrow-down" aria-hidden="true"></i>
+</a>
+
 
   <!-- Dots -->
   <div class="hero-dots" aria-label="Přepínání snímků">
