--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <!-- Telefon – vždy viditelný, mimo nav -->
     <a class="nav-phone" href="tel:+420603212893">
       <i class="fa-solid fa-phone" aria-hidden="true"></i>
-      <span class="nav-phone-text">Zavolejte&nbsp;mi</span>
+      <span class="nav-phone-text">603&nbsp;212&nbsp;893</span>
     </a>
 
 
@@ -137,10 +137,19 @@
 
 
 <div class="brands" aria-label="Značky kotlů">
+  <a href="https://www.vaillant.cz/" target="_blank" rel="noopener nofollow">
     <img src="./img/brand-vaillant.svg" alt="Vaillant" width="170" height="60" loading="lazy">
+  </a>
+
+  <a href="https://www.bosch-homecomfort.com/global/en" target="_blank" rel="noopener nofollow">
     <img src="./img/brand-junkers.svg" alt="Junkers" width="170" height="60" loading="lazy">
+  </a>
+
+  <a href="https://www.protherm.eu/" target="_blank" rel="noopener nofollow">
     <img src="./img/brand-protherm.svg" alt="Protherm" width="170" height="60" loading="lazy">
+  </a>
 </div>
+
 
 
     <!-- SLUŽBY -->
@@ -177,7 +186,7 @@
     <!-- CTA -->
     <section class="section" aria-labelledby="cta">
       <div class="container">
-        <div class="cta">
+        <div class="cta container">
           <h2 id="cta">Potřebujete rychlý zásah v Liberci?</h2>
           <p>Nejrychlejší je zavolat. V naléhavých případech je možný výjezd ještě dnes.</p>
           <p>
