--- a/index.html
+++ b/index.html
@@ -346,6 +346,26 @@
   </script>
   <script>
 (function(){
+  // nastavit CSS proměnnou --vh na 1% aktuální výšky okna
+  const setVH = () => {
+    const vh = window.innerHeight * 0.01;
+    document.documentElement.style.setProperty('--vh', `${vh}px`);
+  };
+
+  let rafId;
+  const schedule = () => {
+    cancelAnimationFrame(rafId);
+    rafId = requestAnimationFrame(setVH);
+  };
+
+  setVH();
+  window.addEventListener('resize', schedule, { passive: true });
+  window.addEventListener('orientationchange', schedule, { passive: true });
+})();
+</script>
+
+  <script>
+(function(){
   const header = document.querySelector('.site-header');
 
   function applyScrollPadding(){
