zmeny hero - pokus

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <!-- Značka: scrolluje na začátek -->
       <a class="brand" href="#top" aria-label="Plynservis Liberec Vladimír Řehák">
         <img class="logo-dark" src="./img/ps-logo.svg" alt="Plynservis Liberec – Vladimír Řehák" width="180" height="auto">
-        <img class="logo-white" src="./img/ps-logo-yellow.svg" alt="" width="180" height="auto" aria-hidden="true">
+        <img class="logo-white" src="./img/ps-logo-white.svg" alt="" width="180" height="auto" aria-hidden="true">
       </a>
 
       <!-- Navigace (kolapsuje do dropdownu) -->
